# WOpenCL_book

./: .gitignore  .gitmodules  HNIW.txt  README.md  a.md  appendix-A.md  appendix-B.md  chapter-11.md  chapter-12.md  chapter-14.md  chapter-16.md  chapter-2.md  chapter-3.md  chapter-4.md  chapter-6.md  chapter-8.md  chapter-9.md  content.md  docker-compose.yml
OpenCL_in_action/: appendix-C.md  appendix-D.md  chapter-1.md  chapter-10.md  chapter-13.md  chapter-15.md  chapter-2.md  chapter-3.md  chapter-4.md  chapter-5.md  chapter-6.md  chapter-7.md
OpenCL_in_action_source/Ch1/matvec/: matvec  matvec.c  matvec.cl
OpenCL_in_action_source/Ch5/id_check/: EMoi.txt  id_check
OpenCL_in_action_source/Ch5/mad_test/: mad_test
OpenCL_in_action_source/Ch5/mod_round/: mod_round
OpenCL_in_action_source/Ch5/op_test/: op_test
OpenCL_in_action_source/Ch5/select_test/: select_test
OpenCL_in_action_source/Ch5/shuffle_test/: shuffle_test
OpenCL_in_action_source/Ch6/interp/: interp
OpenCL_in_action_source/Ch6/simple_image/: simple_image
OpenCL_in_action_source/Ch7/callback/: callback
OpenCL_in_action_source_cpp/Ch1/getInfo/: CMakeLists.txt  Makefile  OpenCL_info.txt  getInfo  getInfo.c  getInfo.cpp
OpenCL_in_action_source_cpp/Ch1/matvec/: CMakeLists.txt  Makefile  matvec.c  matvec.cpp
OpenCL_in_action_source_cpp/Ch2/context_count/: CMakeLists.txt  Makefile  context_count.c  context_count.cpp
OpenCL_in_action_source_cpp/Ch2/device_ext_test/: CMakeLists.txt  Makefile  device_ext_test.c  device_ext_test.cpp
OpenCL_in_action_source_cpp/Ch2/kernel_search/: CMakeLists.txt  Makefile  kernel_search.c  kernel_search.cpp
OpenCL_in_action_source_cpp/Ch2/platform_ext_test/: CMakeLists.txt  Makefile  platform_ext_test.c  platform_ext_test.cpp
OpenCL_in_action_source_cpp/Ch2/program_build/: CMakeLists.txt  Makefile  program_build.c  program_build.cpp
OpenCL_in_action_source_cpp/Ch2/queue_kernel/: CMakeLists.txt  Makefile  blank.cl  queue_kernel.c  queue_kernel.cpp
OpenCL_in_action_source_cpp/Ch3/buffer_check/: CMakeLists.txt  Makefile  blank.cl  buffer_check.c  buffer_check.cpp
OpenCL_in_action_source_cpp/Ch3/buffer_test/: CMakeLists.txt  Makefile  buffer_test.c  buffer_test.cpp
OpenCL_in_action_source_cpp/Ch3/map_copy/: CMakeLists.txt  Makefile  blank.cl  map_copy.c  map_copy.cpp
OpenCL_in_action_source_cpp/Ch4/double_test/: CMakeLists.txt  Makefile  double_test.c  double_test.cl  double_test.cpp
OpenCL_in_action_source_cpp/Ch4/float_config/: CMakeLists.txt  Makefile  float_config.c  float_config.cpp
OpenCL_in_action_source_cpp/Ch4/hello_kernel/: CMakeLists.txt  Makefile  hello_kernel.c  hello_kernel.cl  hello_kernel.cpp
OpenCL_in_action_source_cpp/Ch4/vector_bytes/: CMakeLists.txt  Makefile  vector_bytes.c  vector_bytes.cl  vector_bytes.cpp
OpenCL_in_action_source_cpp/Ch4/vector_widths/: CMakeLists.txt  Makefile  vector_widths.c  vector_widths.cpp
OpenCL_in_action_source_cpp/Ch5/data_transfer/: CMakeLists.txt  Makefile  data_transfer.c  data_transfer.cl  data_transfer.cpp
OpenCL_in_action_source_cpp/Ch5/id_check/: CMakeLists.txt  Makefile  id_check.c  id_check.cpp
OpenCL_in_action_source_cpp/Ch5/op_test/: CMakeLists.txt  Makefile  op_test.c  op_test.cl  op_test.cpp
source/Ch1/getInfo/: Makefile  app  getInfo  getInfo.cpp
source/Ch3/buffer_check/: buffer_check.c
source_cpp/Ch1/getInfo/: Makefile  getInfo.cpp
